--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -63,8 +63,8 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
       <% if language_tabs.any? %>
+      <h1 style="color:white;">The Forge API</h1>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
             <% if lang.is_a? Hash %>
